openwebui/kubectl-yaml/openwebui-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: openwebui-open-webui-nodeport
  namespace: openwebui
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30809
  selector:
    app.kubernetes.io/name: open-webui
